// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form constructor matches snapshot: xx 1`] = `
Form {
  "$active": false,
  "_onsubmit": Array [
    [Function],
  ],
  "fields": Object {
    "x1": Field {
      "default": undefined,
      "fakeValue": null,
      "label": undefined,
      "storage": "db",
      "type": "string",
      "value": [Function],
    },
    "x2": Field {
      "default": undefined,
      "fakeValue": null,
      "index": true,
      "label": undefined,
      "storage": "db",
      "type": "string",
      "v": "required|undefined",
      "value": [Function],
    },
    "x3": Field {
      "default": undefined,
      "fakeValue": 214,
      "label": undefined,
      "storage": "db",
      "type": "number",
      "value": [Function],
    },
    "x4": Field {
      "default": undefined,
      "fakeValue": null,
      "label": undefined,
      "storage": "db",
      "type": "string",
      "value": [Function],
    },
    "x5": Field {
      "default": undefined,
      "fakeValue": null,
      "label": undefined,
      "storage": "db",
      "type": "string",
      "v": "required|undefined",
      "value": [Function],
    },
  },
  "name": "xx",
  "opts": undefined,
  "plural": "xxi",
  "schema": Schema {
    "name": "xx",
    "properties": Object {
      "x1": Object {
        "fakeValue": null,
        "type": "string",
      },
      "x2": Object {
        "fakeValue": null,
        "index": true,
        "type": "string",
      },
      "x3": Object {
        "fakeValue": 214,
        "type": "number",
      },
      "x4": Object {
        "fakeValue": null,
        "type": "string",
      },
      "x5": Object {
        "fakeValue": null,
        "type": "string",
      },
    },
    "required": Array [
      "x2",
      "x5",
    ],
    "type": "object",
    "version": 0,
  },
}
`;

exports[`Form options .captureTimestamp matches snapshot: options.captureTimestamp 1`] = `
Form {
  "$active": false,
  "_onsubmit": Array [
    [Function],
  ],
  "fields": Object {
    "createdAt": Field {
      "default": undefined,
      "fakeValue": 1581958739403,
      "index": true,
      "label": undefined,
      "storage": "db",
      "type": "number",
      "value": [Function],
    },
    "updatedAt": Field {
      "default": undefined,
      "fakeValue": 1582034357504,
      "index": true,
      "label": undefined,
      "storage": "db",
      "type": "number",
      "value": [Function],
    },
    "x1": Field {
      "default": undefined,
      "fakeValue": null,
      "label": undefined,
      "storage": "db",
      "type": "string",
      "value": [Function],
    },
    "x2": Field {
      "default": undefined,
      "fakeValue": null,
      "index": true,
      "label": undefined,
      "storage": "db",
      "type": "string",
      "v": "required|undefined",
      "value": [Function],
    },
    "x3": Field {
      "default": undefined,
      "fakeValue": 211,
      "label": undefined,
      "storage": "db",
      "type": "number",
      "value": [Function],
    },
    "x4": Field {
      "default": undefined,
      "fakeValue": null,
      "label": undefined,
      "storage": "db",
      "type": "string",
      "value": [Function],
    },
    "x5": Field {
      "default": undefined,
      "fakeValue": null,
      "label": undefined,
      "storage": "db",
      "type": "string",
      "v": "required|undefined",
      "value": [Function],
    },
  },
  "name": "xx",
  "opts": Object {
    "captureTimestamp": true,
  },
  "plural": "xxi",
  "schema": Schema {
    "name": "xx",
    "properties": Object {
      "createdAt": Object {
        "fakeValue": 1581958739403,
        "index": true,
        "type": "number",
      },
      "updatedAt": Object {
        "fakeValue": 1582034357504,
        "index": true,
        "type": "number",
      },
      "x1": Object {
        "fakeValue": null,
        "type": "string",
      },
      "x2": Object {
        "fakeValue": null,
        "index": true,
        "type": "string",
      },
      "x3": Object {
        "fakeValue": 211,
        "type": "number",
      },
      "x4": Object {
        "fakeValue": null,
        "type": "string",
      },
      "x5": Object {
        "fakeValue": null,
        "type": "string",
      },
    },
    "required": Array [
      "x2",
      "x5",
    ],
    "type": "object",
    "version": 0,
  },
}
`;
